Implementado y terminado los componentes de botones asi como un container responsive

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" type="text/css" href="../Css/main.css">
     <title>LearnDesign</title>
     <style type="text/css">
-    .sep{
+    .sep {
         padding-top: 20px;
     }
     </style>
 </head>
 
 <body>
-        <h1>Button Raised </h1>
+    <div class="cr container">
         <div class="cr button raised cr-inline">Normal</div>
         <div class="cr button raised blue cr-inline">Blue</div>
         <div class="cr button raised green cr-inline">Green</div>
@@ -22,31 +22,27 @@
         <div class="cr button raised amber cr-inline">Amber</div>
         <div class="cr button raised light-blue cr-inline">Lightblue</div>
         <div class="cr button raised black cr-inline">Black</div>
-        <div class="cr button raised white cr-inline">White</div>
         <div class="cr button raised indigo cr-inline">Indigo</div>
         <div class="cr button raised orange cr-inline">Orange</div>
         <div class="cr button raised teal cr-inline">Teal</div>
         <div class="cr button raised pink cr-inline">Pink</div>
         <div class="cr button raised deep-purple">Purple</div>
-
-        <div class="sep"></div>
-
         <div class="cr button raised gold">Gold</div>
-		<h1>Button Normal</h1>
-		<div class="cr button cr-inline">Normal</div>
+        <h1>Button Raised </h1>
+        <div class="sep"></div>
+        <h1>Button Normal</h1>
+        <div class="cr button cr-inline">Normal</div>
         <div class="cr button blue cr-inline">Blue</div>
         <div class="cr button green cr-inline">Green</div>
         <div class="cr button red cr-inline">Red</div>
         <div class="cr button amber cr-inline">Amber</div>
         <div class="cr button light-blue cr-inline">Lightblue</div>
         <div class="cr button black cr-inline">Black</div>
-        <div class="cr button white cr-inline">White</div>
         <div class="cr button indigo cr-inline">Indigo</div>
         <div class="cr button orange cr-inline">Orange</div>
         <div class="cr button teal cr-inline">Teal</div>
         <div class="cr button pink cr-inline">Pink</div>
         <div class="cr button deep-purple">Purple</div>
-        
         <div class="sep"></div>
         <div class="cr button gold cr-inline">Gold</div>
         <h1>Hoverable Button</h1>
@@ -57,7 +53,6 @@
         <div class="cr button hoverable amber cr-inline">Amber</div>
         <div class="cr button hoverable light-blue cr-inline">Lightblue</div>
         <div class="cr button hoverable black cr-inline">Black</div>
-        <div class="cr button hoverable white cr-inline">White</div>
         <div class="cr button hoverable indigo cr-inline">Indigo</div>
         <div class="cr button hoverable orange cr-inline">Orange</div>
         <div class="cr button hoverable teal cr-inline">Teal</div>
@@ -65,7 +60,7 @@
         <div class="cr button hoverable deep-purple">Purple</div>
         <div class="cr button hoverable gold">Gold</div>
         <h1>Outline Buttons</h1>
-        <div class="cr button outline cr-inline">Normal</div>
+        <div class="cr button plain outline cr-inline">Normal</div>
         <div class="cr button outline blue  cr-inline">Blue</div>
         <div class="cr button outline green cr-inline">Green</div>
         <div class="cr button outline amber cr-inline">Amber</div>
@@ -76,21 +71,39 @@
         <div class="cr button outline deep-purple cr-inline">deep-purple</div>
         <div class="cr button outline teal cr-inline">Teal</div>
         <div class="sep"></div>
-        
+    </div>
+    <div class="cr container">
+        <h1>Button Can be of diferent Sizes</h1>
+        <ul>
+            <li>
+                <div class="cr button small">Small</div>
+            </li>
+            <li>
+                <div class="cr button medium">Medium</div>
+            </li>
+            <li>
+                <div class="cr button large">Large</div>
+            </li>
+            <li>
+                <div class="cr button big">Big Button</div>
+            </li>
+        </ul>
+    </div>
+    <div class="cr container">
+        <h1>Buttons can adapt to fit its container</h1>
+        <div class="cr button adaptive">Adaptative</div>
+    </div>
+    <div class="cr container">
         <h1>Font Test</h1>
+        <h2>lorem ipsum</h2>
         <p>
-        	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-		
-        <div class="col-4">
-        	<div class="cr button">Row 1</div>
-        </div>
-
+        <h2>Lorem ipsum 2</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
     <script type="text/javascript"></script>
 </body>
 
