Los botones fueron modificados para que reaccionen mejor a los click del usuario, asi como se mejoro los colores que utiliza, corregido algunos bugs en los mismos botones que no mostraban sus transiciones correctamente. Agregado archivos sass de los demas componentes

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
 
 <body>
     <div class="cr container">
+        <h1>Button Raised </h1>
+        
         <div class="cr button raised cr-inline">Normal</div>
         <div class="cr button raised blue cr-inline">Blue</div>
         <div class="cr button raised green cr-inline">Green</div>
@@ -28,7 +30,6 @@
         <div class="cr button raised pink cr-inline">Pink</div>
         <div class="cr button raised deep-purple">Purple</div>
         <div class="cr button raised gold">Gold</div>
-        <h1>Button Raised </h1>
         <div class="sep"></div>
         <h1>Button Normal</h1>
         <div class="cr button cr-inline">Normal</div>
@@ -60,7 +61,7 @@
         <div class="cr button hoverable deep-purple">Purple</div>
         <div class="cr button hoverable gold">Gold</div>
         <h1>Outline Buttons</h1>
-        <div class="cr button plain outline cr-inline">Normal</div>
+        <div class="cr button outline cr-inline">Normal</div>
         <div class="cr button outline blue  cr-inline">Blue</div>
         <div class="cr button outline green cr-inline">Green</div>
         <div class="cr button outline amber cr-inline">Amber</div>
@@ -70,6 +71,14 @@
         <div class="cr button outline gold cr-inline">Gold</div>
         <div class="cr button outline deep-purple cr-inline">deep-purple</div>
         <div class="cr button outline teal cr-inline">Teal</div>
+        <div class="sep"></div>
+        <h1>Plain Buttons with no rounded borders</h1>
+        <div class="cr button plain outline cr-inline">Normal</div>
+        <div class="cr button plain outline blue  cr-inline">Blue</div>
+        <div class="cr button plain raised  green cr-inline">Green</div>
+        <div class="cr button plain amber cr-inline">Amber</div>
+        <div class="cr button plain indigo cr-inline">Indigo</div>
+        <div class="cr button plain red cr-inline">Red</div>
         <div class="sep"></div>
     </div>
     <div class="cr container">
@@ -86,6 +95,12 @@
             </li>
             <li>
                 <div class="cr button big">Big Button</div>
+            </li>
+             <li>
+                <div class="cr button big medium">Big Medium</div>
+            </li>
+            <li>
+                <div class="cr button big large">Big large</div>
             </li>
         </ul>
     </div>
