Esta listo los inputs, material pero faltan algunas validaciones cuando agrego la clase validate

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,10 @@
 </head>
 
 <body>
-    <div class="cr container">
+    <!--     <div class="cr container">
         <h1>Button Raised </h1>
-        
-        <div class="cr button raised cr-inline">Normal</div>
-        <div class="cr button raised blue cr-inline">Blue</div>
+        <div class="cr button raised ripple cr-inline">Normal</div>
+        <div class="cr button raised ripple blue cr-inline">Blue</div>
         <div class="cr button raised green cr-inline">Green</div>
         <div class="cr button raised red cr-inline">Red</div>
         <div class="cr button raised amber cr-inline">Amber</div>
@@ -118,7 +117,38 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
+    </div> -->
+    <div class="cr container">
+        <span>Input Basic </span>
+        <input placeholder="Search.." class="cr input basic" type="text">
     </div>
+    <div class="cr container">
+        <span>Input Medium</span>
+        <input placeholder="Search.." class="cr input basic medium" type="text">
+    </div>
+    <div class="cr container">
+        <span>Input adapt to it container</span>
+        <input placeholder="Search.." class="cr input basic adaptive " type="text">
+    </div>
+    <!-- Material Input -->
+    <div class="cr container">
+        <form>
+            <div class="material-field">
+                <label class="m-label" for="input1">Your name</label>
+                <input class="m-input validate letters" type="text" id="input1" name="input1">
+            </div>
+             <div class="material-field">
+                <label class="m-label" for="input1">Your name</label>
+                <input class="m-input validate numbers" type="text" id="input1" name="input1">
+            </div>
+             <div class="material-field">
+                <label class="m-label" for="input1">Your name</label>
+                <input class="m-input validate email" type="text" id="input1" name="input1">
+            </div>
+        </form>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../JavaScript/Crow.js"></script>
     <script type="text/javascript"></script>
 </body>
 
