--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
     </div> -->
-    <div class="cr container">
+<!--     <div class="cr container">
         <span>Input Basic </span>
         <input placeholder="Search.." class="cr input basic" type="text">
     </div>
@@ -129,22 +129,28 @@
     <div class="cr container">
         <span>Input adapt to it container</span>
         <input placeholder="Search.." class="cr input basic adaptive " type="text">
-    </div>
+    </div> -->
     <!-- Material Input -->
     <div class="cr container">
         <form>
-            <div class="material-field">
+         <!--    <div class="material-field">
                 <label class="m-label" for="input1">Your name</label>
-                <input class="m-input validate letters" type="text" id="input1" name="input1">
+                <input  class="m-input validate letters" type="text" id="input1">
+            </div> -->
+             <div id="field1" class="material-field">
+                <label class="m-label" for="input2">Your phone number</label>
+                <input  class="m-input validate numbers" type="text" id="input2" name="input2">
+                <span class="cr-state" data-positive="Done" data-error="Error, just numbers allowed"></span>
             </div>
-             <div class="material-field">
-                <label class="m-label" for="input1">Your name</label>
-                <input class="m-input validate numbers" type="text" id="input1" name="input1">
+            <div id="field2" class="material-field">
+                <label class="m-label" for="input2">Your name</label>
+                <input  class="m-input validate letters" type="text" id="input2" name="input2">
+                <span class="cr-state" data-positive="Done" data-error="Error, just letters allowed"></span>
             </div>
-             <div class="material-field">
-                <label class="m-label" for="input1">Your name</label>
-                <input class="m-input validate email" type="text" id="input1" name="input1">
-            </div>
+             <!-- <div class="material-field"> -->
+             <!--    <label class="m-label" for="input1">Your name</label>
+                <input class="m-input validate email" type="text" id="input3">
+            </div> -->
         </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
