Finalizado parcialmente input basic con validaciones

--- a/public/index.html
+++ b/public/index.html
@@ -138,21 +138,34 @@
                 <input required="true" class="m-input validate numbers" type="text" id="input2" name="input2">
                 <span class="cr-state" data-positive="Done" data-error="Error, just numbers allowed"></span>
             </div>
-
-             <div class="cr-material-field">
+            <div class="cr-material-field">
                 <label class="m-label" for="input2">Your phone number</label>
                 <input required="true" class="m-input validate email" type="text" id="input2" name="input2">
                 <span class="cr-state" data-positive="Done" data-error="Error, invalid e-mail adress"></span>
             </div> -->
+            <div class="cr input basic">
+                <label for="input1">Name</label>
+                <input class="in-basic validate email medium" type="text" id="input1" name="input1">
+                <span class="cr-message"></span>
+            </div>
+            
+            <div class="cr input basic">
+                <label for="input1">Last Name</label>
+                <input class="medium" type="text" id="input1" name="input1">
+            </div>
 
             <div class="cr input basic">
                 <label for="input1">Name</label>
-                <input data-error="error" class="medium" type="text" id="input1" name="input1">
+                <input class="medium" type="text" id="input1" name="input1">
             </div>
-        
+
+            <div class="cr input basic">
+                <label for="input1">Name</label>
+                <input class="medium" type="text" id="input1" name="input1">
+            </div>
 
             <div class="sep"></div>
-            <button type="submit" class="cr button blue raised">Submit</button>
+            <button type="submit" class="cr button blue ">Submit</button>
         </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
