Agregado nuevos inputs
Estos nuevos inputs tienen coloreado de letras y coloreado de outline,
asi como ahora se ha agregado una mejora a la clase validate que tenia
un bug y se quedaba marcado el done.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="../Css/main.css">
     <title>LearnDesign</title>
     <style type="text/css">
+    body{
+    }
     .sep {
         padding-top: 20px;
     }
@@ -145,13 +147,14 @@
             </div> -->
             <div class="cr input basic">
                 <label for="input1">Name</label>
-                <input class="in-basic validate email medium" type="text" id="input1" name="input1">
+                <input class="in-basic validate numbers medium green-outline green-font rounded bold " type="text" id="input1" name="input1">
                 <span class="cr-message"></span>
             </div>
             
             <div class="cr input basic">
                 <label for="input1">Last Name</label>
-                <input class="medium" type="text" id="input1" name="input1">
+                <input class="in-basic medium" type="text" id="input1" name="input1">
+                <span class="cr-message"></span>
             </div>
 
             <div class="cr input basic">
@@ -165,7 +168,7 @@
             </div>
 
             <div class="sep"></div>
-            <button type="submit" class="cr button blue ">Submit</button>
+            <button type="submit" class="cr button outline green ">Submit</button>
         </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
