--- a/public/index.html
+++ b/public/index.html
@@ -151,10 +151,9 @@
                 <span class="cr-message"></span>
             </div>
             
-            <div class="cr input basic">
-                <label for="input1">Last Name</label>
+            <div class="cr input label">
+                <div class="label">Name</div>
                 <input class="in-basic medium" type="text" id="input1" name="input1">
-                <span class="cr-message"></span>
             </div>
 
             <div class="cr input basic">
