Los inputs con label ya estan listos, sin embargo hay un problema que parece que solo puede solucionarse con jasvascript. El width del input varia mucho dependiendo de la longitud del label y eso hace que en un form los inputs tengan diferente size y esto es un gran problema. Hay que hacer que de alguna forma todos los inputs tengan el mismo width aunque tengan un label de diferente size.

--- a/public/index.html
+++ b/public/index.html
@@ -145,24 +145,24 @@
                 <input required="true" class="m-input validate email" type="text" id="input2" name="input2">
                 <span class="cr-state" data-positive="Done" data-error="Error, invalid e-mail adress"></span>
             </div> -->
-            <div class="cr input basic">
+         <!--    <div class="cr input basic">
                 <label for="input1">Name</label>
                 <input class="in-basic validate numbers medium green-outline green-font rounded bold " type="text" id="input1" name="input1">
                 <span class="cr-message"></span>
             </div>
-            
+             -->
             <div class="cr input label">
                 <div class="label">Name</div>
-                <input class="in-basic medium" type="text" id="input1" name="input1">
+                <input class="medium" type="text" id="input1" name="input1">
             </div>
 
-            <div class="cr input basic">
-                <label for="input1">Name</label>
+            <div class="cr input label">
+                <div class="label">Last Name</div>
                 <input class="medium" type="text" id="input1" name="input1">
             </div>
 
             <div class="cr input basic">
-                <label for="input1">Name</label>
+                <label>Email</label>
                 <input class="medium" type="text" id="input1" name="input1">
             </div>
 
