Corregido parcialmente el width de los inputs

--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
             </div>
 
             <div class="cr input label">
-                <div class="label">Last Name</div>
+                <div class="label">Last Name and email</div>
                 <input class="medium" type="text" id="input1" name="input1">
             </div>
 
