Implementado cards, falta mejorar los input labels

--- a/public/index.html
+++ b/public/index.html
@@ -16,158 +16,31 @@
 </head>
 
 <body>
-    <!--     <div class="cr container">
-        <h1>Button Raised </h1>
-        <div class="cr button raised ripple cr-inline">Normal</div>
-        <div class="cr button raised ripple blue cr-inline">Blue</div>
-        <div class="cr button raised green cr-inline">Green</div>
-        <div class="cr button raised red cr-inline">Red</div>
-        <div class="cr button raised amber cr-inline">Amber</div>
-        <div class="cr button raised light-blue cr-inline">Lightblue</div>
-        <div class="cr button raised black cr-inline">Black</div>
-        <div class="cr button raised indigo cr-inline">Indigo</div>
-        <div class="cr button raised orange cr-inline">Orange</div>
-        <div class="cr button raised teal cr-inline">Teal</div>
-        <div class="cr button raised pink cr-inline">Pink</div>
-        <div class="cr button raised deep-purple">Purple</div>
-        <div class="cr button raised gold">Gold</div>
-        <div class="sep"></div>
-        <h1>Button Normal</h1>
-        <div class="cr button cr-inline">Normal</div>
-        <div class="cr button blue cr-inline">Blue</div>
-        <div class="cr button green cr-inline">Green</div>
-        <div class="cr button red cr-inline">Red</div>
-        <div class="cr button amber cr-inline">Amber</div>
-        <div class="cr button light-blue cr-inline">Lightblue</div>
-        <div class="cr button black cr-inline">Black</div>
-        <div class="cr button indigo cr-inline">Indigo</div>
-        <div class="cr button orange cr-inline">Orange</div>
-        <div class="cr button teal cr-inline">Teal</div>
-        <div class="cr button pink cr-inline">Pink</div>
-        <div class="cr button deep-purple">Purple</div>
-        <div class="sep"></div>
-        <div class="cr button gold cr-inline">Gold</div>
-        <h1>Hoverable Button</h1>
-        <div class="cr button hoverable cr-inline">Normal</div>
-        <div class="cr button hoverable blue cr-inline">Blue</div>
-        <div class="cr button hoverable green cr-inline">Green</div>
-        <div class="cr button hoverable red cr-inline">Red</div>
-        <div class="cr button hoverable amber cr-inline">Amber</div>
-        <div class="cr button hoverable light-blue cr-inline">Lightblue</div>
-        <div class="cr button hoverable black cr-inline">Black</div>
-        <div class="cr button hoverable indigo cr-inline">Indigo</div>
-        <div class="cr button hoverable orange cr-inline">Orange</div>
-        <div class="cr button hoverable teal cr-inline">Teal</div>
-        <div class="cr button hoverable pink cr-inline">Pink</div>
-        <div class="cr button hoverable deep-purple">Purple</div>
-        <div class="cr button hoverable gold">Gold</div>
-        <h1>Outline Buttons</h1>
-        <div class="cr button outline cr-inline">Normal</div>
-        <div class="cr button outline blue  cr-inline">Blue</div>
-        <div class="cr button outline green cr-inline">Green</div>
-        <div class="cr button outline amber cr-inline">Amber</div>
-        <div class="cr button outline indigo cr-inline">Indigo</div>
-        <div class="cr button outline red cr-inline">Red</div>
-        <div class="cr button outline pink cr-inline">Pink</div>
-        <div class="cr button outline gold cr-inline">Gold</div>
-        <div class="cr button outline deep-purple cr-inline">deep-purple</div>
-        <div class="cr button outline teal cr-inline">Teal</div>
-        <div class="sep"></div>
-        <h1>Plain Buttons with no rounded borders</h1>
-        <div class="cr button plain outline cr-inline">Normal</div>
-        <div class="cr button plain outline blue  cr-inline">Blue</div>
-        <div class="cr button plain raised  green cr-inline">Green</div>
-        <div class="cr button plain amber cr-inline">Amber</div>
-        <div class="cr button plain indigo cr-inline">Indigo</div>
-        <div class="cr button plain red cr-inline">Red</div>
-        <div class="sep"></div>
-    </div>
-    <div class="cr container">
-        <h1>Button Can be of diferent Sizes</h1>
-        <ul>
-            <li>
-                <div class="cr button small">Small</div>
-            </li>
-            <li>
-                <div class="cr button medium">Medium</div>
-            </li>
-            <li>
-                <div class="cr button large">Large</div>
-            </li>
-            <li>
-                <div class="cr button big">Big Button</div>
-            </li>
-             <li>
-                <div class="cr button big medium">Big Medium</div>
-            </li>
-            <li>
-                <div class="cr button big large">Big large</div>
-            </li>
-        </ul>
-    </div>
-    <div class="cr container">
-        <h1>Buttons can adapt to fit its container</h1>
-        <div class="cr button adaptive">Adaptative</div>
-    </div>
-    <div class="cr container">
-        <h1>Font Test</h1>
-        <h2>lorem ipsum</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h2>Lorem ipsum 2</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-    </div> -->
-    <!--     <div class="cr container">
-        <span>Input Basic </span>
-        <input placeholder="Search.." class="cr input basic" type="text">
-    </div>
-    <div class="cr container">
-        <span>Input Medium</span>
-        <input placeholder="Search.." class="cr input basic medium" type="text">
-    </div>
-    <div class="cr container">
-        <span>Input adapt to it container</span>
-        <input placeholder="Search.." class="cr input basic adaptive " type="text">
-    </div> -->
-    <!-- Material Input -->
     <div class="cr container">
         <form>
-            <!-- <div class="cr-material-field">
-                <label class="m-label" for="input2">Your phone number</label>
-                <input required="true" class="m-input validate numbers" type="text" id="input2" name="input2">
-                <span class="cr-state" data-positive="Done" data-error="Error, just numbers allowed"></span>
-            </div>
-            <div class="cr-material-field">
-                <label class="m-label" for="input2">Your phone number</label>
-                <input required="true" class="m-input validate email" type="text" id="input2" name="input2">
-                <span class="cr-state" data-positive="Done" data-error="Error, invalid e-mail adress"></span>
-            </div> -->
-         <!--    <div class="cr input basic">
-                <label for="input1">Name</label>
-                <input class="in-basic validate numbers medium green-outline green-font rounded bold " type="text" id="input1" name="input1">
-                <span class="cr-message"></span>
-            </div>
-             -->
             <div class="cr input label">
                 <div class="label">Name</div>
-                <input class="medium" type="text" id="input1" name="input1">
+                <input class="adaptive" type="text" id="input1" name="input1">
             </div>
 
             <div class="cr input label">
                 <div class="label">Last Name and email</div>
-                <input class="medium" type="text" id="input1" name="input1">
-            </div>
-
-            <div class="cr input basic">
-                <label>Email</label>
-                <input class="medium" type="text" id="input1" name="input1">
+                <input class="adaptive" type="text" id="input1" name="input1">
             </div>
 
             <div class="sep"></div>
             <button type="submit" class="cr button outline green ">Submit</button>
+            <div class="sep"></div>
+
+            <div class="cr card">
+                <div class="card-head">Header</div>
+                <div class="card-body">
+                    
+                </div>
+                <div class="card-footer">
+                    
+                </div>
+            </div>
         </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
