Esta corregido los inputs labeles, ademas de que se agrego un nuevo componente llamado snackbar, es un componente material design muy util si se decide utilizar componentes materiales

--- a/public/index.html
+++ b/public/index.html
@@ -17,31 +17,27 @@
 
 <body>
     <div class="cr container">
-        <form>
             <div class="cr input label">
-                <div class="label">Name</div>
-                <input class="adaptive" type="text" id="input1" name="input1">
+                <input type="text" id="input1" name="input1">
+                <button class="ender">Copy</button>
             </div>
 
-            <div class="cr input label">
-                <div class="label">Last Name and email</div>
+            <!-- <div class="cr input label">
+                <div class="label">Last Name</div>
                 <input class="adaptive" type="text" id="input1" name="input1">
-            </div>
+            </div> -->
 
             <div class="sep"></div>
-            <button type="submit" class="cr button outline green ">Submit</button>
+            <button type="submit" class="cr button outline green">Submit</button>
             <div class="sep"></div>
 
             <div class="cr card">
                 <div class="card-head">Header</div>
                 <div class="card-body">
-                    
                 </div>
                 <div class="card-footer">
-                    
                 </div>
             </div>
-        </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
