--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="cr snackbar ">
             <span class="snack-message"></span>
-            <button class="snack action">Random Action</button>
+            <button class="snack action undo">UNDO</button>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
